--- a/styles/component.module.css
+++ b/styles/component.module.css
@@ -2,16 +2,22 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 11vw;
+    gap: 10vw;
     padding-top: 6vh;
     font-weight: 300;
     font-size: 1.3rem;
     color: #ADACAC;
 }
 
-.header_div {
-    position: relative;
-    padding: 0 10vw 0 10vw;
+.header_navbar_icon {
+    align-self: flex-end;
+    visibility: hidden;
+    width: 3vh;
+    height: 3vh;
+}
+
+.header_navbar_icon path {
+    color: #EFEFEF;
 }
 
 .header_h1_blue {
@@ -20,13 +26,14 @@
 }
 
 .header_icon_flex {
+    flex-grow: 1;
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    margin-bottom: 6vh;
 }
 
 .header_icon {
-    justify-self: center;
     width: 5vh;
     height: 5vh;
     color: #0080B7;
@@ -272,4 +279,55 @@
 
 .footer_icons {
     color: #171717;
+}
+
+@media (min-width: 1024px) and (max-width: 1400px) {
+    .navbar {
+        font-size: 1.3rem;
+        gap: 8vw;
+    }
+}
+
+@media (min-width: 750px) and (max-width: 1024px) {
+    .navbar {
+        visibility: hidden;
+        height: 0;
+        width: 0;
+    }
+    .header_navbar_icon {
+        visibility: visible;
+    }
+}
+
+@media (min-width: 450px) and (max-width: 750px) {
+    .navbar {
+        visibility: hidden;
+        height: 0;
+        width: 0;
+    }
+    .header_navbar_icon {
+        visibility: visible;
+    }
+}
+
+@media (min-width: 350px) and (max-width: 450px) {
+    .navbar {
+        visibility: hidden;
+        height: 0;
+        width: 0;
+    }
+    .header_navbar_icon {
+        visibility: visible;
+    }
+}
+
+@media (min-width: 0px) and (max-width: 350px) {
+    .navbar {
+        visibility: hidden;
+        height: 0;
+        width: 0;
+    }
+    .header_navbar_icon {
+        visibility: visible;
+    }
 }
