--- a/styles/global.css
+++ b/styles/global.css
@@ -94,6 +94,10 @@ span {
     margin-bottom: 4vh;
 }
 
+#benefits h2 {
+    margin-bottom: 4vh;
+}
+
 @media (min-width: 1024px) and (max-width: 1400px) {
     header {
         background-position: right 10% bottom;
