--- a/styles/component.module.css
+++ b/styles/component.module.css
@@ -378,9 +378,22 @@
 }
 
 .benefits_grid {
+    padding: 0 5vw 0 5vw;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    row-gap: 5vmin;
+    column-gap: 5vmin;
+}
+
+.benefits_grid div {
+    height: 25vh;
+    border-radius: 25px;
+}
+
+.benefits_grid p {
+    padding: 0 2vw 3vh 2vw;
+    color: #EFEFEF;
 }
 
 .benefits_time {
@@ -407,6 +420,12 @@
     background-size: cover;
     background-position: center;
     grid-column: 2 / 4;
+}
+
+.benefits_time, .benefits_price, 
+.benefits_safety, .benefits_care {
+    display: grid;
+    align-items: flex-end;
 }
 
 .feedback_section {
@@ -547,7 +566,7 @@
     }
 }
 
-@media (min-width: 1024px) and (max-width: 1400px) {
+@media (min-width: 1026px) and (max-width: 1400px) {
     .navbar {
         gap: 8vw;
     }
@@ -557,7 +576,7 @@
     }
 }
 
-@media (min-width: 750px) and (max-width: 1023px) {
+@media (min-width: 750px) and (max-width: 1025px) {
     .navbar {
         visibility: hidden;
         height: 0;
@@ -576,6 +595,24 @@
         width: 4.5vh;
         height: 4.5vh;
         margin-bottom: 2vh;
+    }
+
+    .benefits_grid {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    .benefits_care, .benefits_time {
+        grid-column: 1;
+    }
+
+    .benefits_grid div {
+        height: 17vh;
+    }
+
+    .benefits_grid p {
+        font-size: 1.5rem;
+        padding: 0 3vw 3vh 3vw;
     }
 }
 
@@ -609,6 +646,24 @@
     .doc_rect {
         padding: 0 3vw 0 3vw;
     }
+
+    .benefits_grid {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    .benefits_care, .benefits_time {
+        grid-column: 1;
+    }
+
+    .benefits_grid div {
+        height: 17vh;
+    }
+
+    .benefits_grid p {
+        font-size: 1.2rem;
+        padding: 0 4vw 3vh 4vw;
+    }
 }
 
 @media (min-width: 350px) and (max-width: 450px) {
@@ -641,6 +696,24 @@
     .questions_icons  {
         height: 4vmin;
         width: 4vmin;
+    }
+
+    .benefits_grid {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    .benefits_care, .benefits_time {
+        grid-column: 1;
+    }
+
+    .benefits_grid div {
+        height: 17vh;
+    }
+
+    .benefits_grid p {
+        font-size: 1.2rem;
+        padding: 0 4vw 3vh 4vw;
     }
 }
 
@@ -702,5 +775,24 @@
     .questions_icons  {
         height: 4vmin;
         width: 4vmin;
+    }
+
+    .benefits_grid {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    .benefits_care, .benefits_time {
+        grid-column: 1;
+    }
+
+    .benefits_grid div {
+        border-radius: 15px;
+        height: 17vh;
+    }
+
+    .benefits_grid p {
+        font-size: 0.9rem;
+        padding: 0 4vw 3vh 5vw;
     }
 }
