--- a/styles/component.module.css
+++ b/styles/component.module.css
@@ -149,22 +149,29 @@
     align-content: center;
 }
 
-.review_form_units {
+.review_form_units,
+.comment_form_units,
+.comment_form_textarea {
+    overflow-y: hidden;
     position: relative;
-    height: 7vh;
+    height: calc(4.5vh + 1.2rem);
 }
 
-.review_form_units input {
+.review_form_units input,
+.comment_form_units input,
+.comment_form_textarea textarea {
     position: absolute;
-    padding: 1.5vh 0 0 2vh;
+    padding: 3.3vh 2vh 2vh 2vh;
     height: 100%;
     width: 100%;
     box-sizing: border-box;
     font-size: 1rem;
 }
 
-.review_form_units label {
-    padding: 2.3vh 0 0 2vh;
+.review_form_units label,
+.comment_form_units label,
+.comment_form_textarea label {
+    padding: 2.3vh 0 2.3vh 2.3vh;
     position: absolute;
     font-size: 1.2rem;
     font-weight: 500;
@@ -174,9 +181,13 @@
 }
 
 .review_form input:focus ~ label,
-.review_form input:valid ~ label {
+.review_form input:valid ~ label,
+.comment_form input:focus ~ label,
+.comment_form input:valid ~ label,
+.comment_form_textarea textarea:focus ~ label,
+.comment_form_textarea textarea:valid ~ label {
     font-size: 0.6rem;
-    padding: 1.5vh 0 0 2vh;
+    padding: 1.5vh 0 0 2.3vh;
 }
 
 .review_form_photo {
@@ -190,6 +201,7 @@
     cursor: pointer;
 }
 
+/*
 .review_form_photo:has(input:valid, input:focus) {
     border: dashed #0080B7;
 }
@@ -197,6 +209,7 @@
 .review_form_photo:has(input:invalid) {
     border: dashed #ADACAC;
 }
+*/
 
 .review_form_photo::placeholder {
     text-align: center;
@@ -428,34 +441,33 @@
     align-items: flex-end;
 }
 
-.feedback_section {
-    overflow-y: hidden;
-    height: 70vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: #EFEFEF;
-}
-
-.feedback_h1 {
-    margin: 0;
-    font-size: 12.5em;
-    font-weight: 900;
-    color: #0080B7;
-}
-
-.feedback_h2 {
-    font-size: 4em;
-    font-weight: 700;
-    color: #171717;
-}
-
 .carousel {
+    width: 70%;
     display: flex;
     flex-direction: column;
     gap: 2vh;
     padding-bottom: 35vh;
+}
+
+.carousel_item {
+    align-self: flex-end;
+    height: 35vh;
+    width: 30vw;
+    padding: 0 3vw 0 3vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #171717;
+    border-radius: 25px;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+}
+
+.carousel_item p {
+    color: #EFEFEF;
+    font-size: 1.6em;
 }
 
 .carousel_item_prev_prev {
@@ -538,7 +550,33 @@
     -moz-transform: translate3d(0, 0, 0);
 }
 
-.comment_grid {
+.comment_form {
+    margin-top: 5vh;
+    display: grid;
+    row-gap: 3vh;
+    column-gap: 2vw;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    justify-content: center;
+    align-content: center;
+}
+
+.comment_form_textarea {
+    grid-area: 1 / 2 / 4 / 2;
+    height: 100%;
+}
+
+.comment_form_textarea textarea {
+    padding: 3vh 2vh 0 2vh;
+
+    overflow: auto;
+    outline: none;
+
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+
+    resize: none;
 }
 
 .footer_icons {
@@ -614,6 +652,27 @@
         font-size: 1.5rem;
         padding: 0 3vw 3vh 3vw;
     }
+
+    .review_form, 
+    .comment_form {
+        margin-top: 3vh;
+    }
+
+    .review_form input:focus ~ label,
+    .review_form input:valid ~ label,
+    .comment_form input:focus ~ label,
+    .comment_form input:valid ~ label,
+    .comment_form_textarea textarea:focus ~ label,
+    .comment_form_textarea textarea:valid ~ label {
+        font-size: 0.8rem;
+        padding: 1.5vh 0 0 2.1vh;
+    }
+
+    .review_form_units input,
+    .comment_form_units input,
+    .comment_form_textarea textarea {
+        padding: 3.5vh 2vh 2vh 2vh;
+    }
 }
 
 @media (min-width: 450px) and (max-width: 750px) {
@@ -663,6 +722,20 @@
     .benefits_grid p {
         font-size: 1.2rem;
         padding: 0 4vw 3vh 4vw;
+    }
+
+    .review_form, 
+    .comment_form {
+        margin-top: 3vh;
+    }
+
+    .comment_form {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    .comment_form_textarea {
+        grid-area: 3;
     }
 }
 
@@ -714,6 +787,21 @@
     .benefits_grid p {
         font-size: 1.2rem;
         padding: 0 4vw 3vh 4vw;
+    }
+
+    .review_form, 
+    .comment_form {
+        margin-top: 3vh;
+    }
+
+    .comment_form {
+        display: flex;
+        flex-direction: column;
+        gap: 2vh;
+    }
+
+    .comment_form_textarea {
+        height: 20vh;
     }
 }
 
@@ -794,5 +882,27 @@
     .benefits_grid p {
         font-size: 0.9rem;
         padding: 0 4vw 3vh 5vw;
+    }
+
+    .review_form, 
+    .comment_form {
+        margin-top: 3vh;
+    }
+
+    .comment_form {
+        display: flex;
+        flex-direction: column;
+        gap: 2vh;
+    }
+
+    .comment_form_textarea {
+        height: 25vh;
+    }
+
+    .review_form_units label,
+    .comment_form_units label,
+    .comment_form_textarea label,
+    .review_form_photo p {
+        font-size: 1rem;
     }
 }
