footer styles ready

--- a/styles/global.css
+++ b/styles/global.css
@@ -16,7 +16,7 @@ section {
     height: 100%;
 }
 
-header, footer {
+header {
     padding: 0 10vw 0 10vw;
 }
 
@@ -131,6 +131,20 @@ span {
 #feedback h2 {
     font-size: 4em;
     font-weight: 700;
+    color: #171717;
+}
+
+footer {
+    padding: 5vh 10vw 5vh 10vw;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    background-color: #EFEFEF;
+}
+
+footer a {
+    font-weight: 300;
+    font-size: 1.3rem;
     color: #171717;
 }
 
