--- a/styles/component.module.css
+++ b/styles/component.module.css
@@ -579,8 +579,48 @@
     resize: none;
 }
 
-.footer_icons {
+.footer_links, .centering_grid, .footer_media,
+.centering_grid_media {
+    display: flex;
+    flex-direction: column;
+    gap: 4vh;
+}
+
+.centering_grid span,
+.centering_grid_media span {
+    gap: 1vw;
+    align-items: center;
+}
+
+.centering_grid p,
+.centering_grid_media p {
+    font-weight: 300;
+    font-size: 1.3rem;
     color: #171717;
+}
+
+.footer_icons,
+.footer_icons path,
+.footer_icons_link,
+.footer_icons_link path {
+    width: 3.5vh;
+    height: 3.5vh;
+    color: #171717;
+}
+
+.footer_icons_link:hover,
+.footer_icons_link:hover path {
+    color: #0080B7;
+}
+
+.footer_media {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.centering_grid_media {
+    grid-column: 3 / 5;
 }
 
 @media (min-width: 1400px) {
