--- a/styles/component.module.css
+++ b/styles/component.module.css
@@ -446,7 +446,7 @@
     display: flex;
     flex-direction: column;
     gap: 2vh;
-    padding-bottom: 35vh;
+    padding-bottom: 220vh;
 }
 
 .carousel_item {
@@ -459,95 +459,11 @@
     align-items: center;
     background-color: #171717;
     border-radius: 25px;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
 }
 
 .carousel_item p {
     color: #EFEFEF;
     font-size: 1.6em;
-}
-
-.carousel_item_prev_prev {
-    height: 35vh;
-    width: 35vw;
-    padding: 0 3vw 0 3vw;
-    display: flex;
-    align-self: flex-start;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.6em;
-    color: #EFEFEF;
-    background-color: #171717;
-    border-radius: 25px;
-    -webkit-filter: blur(7px);
-    -moz-filter: blur(7px);
-    -o-filter: blur(7px);
-    -ms-filter: blur(7px);
-    filter: blur(7px);
-}
-
-.carousel_item_prev {
-    height: 35vh;
-    width: 35vw;
-    padding: 0 3vw 0 3vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.6em;
-    color: #EFEFEF;
-    background-color: #171717;
-    border-radius: 25px;
-    -webkit-filter: blur(7px);
-    -moz-filter: blur(7px);
-    -o-filter: blur(7px);
-    -ms-filter: blur(7px);
-    filter: blur(7px);
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-}
-
-.carousel_item_cur {
-    height: 35vh;
-    width: 35vw;
-    padding: 0 3vw 0 3vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.6em;
-    color: #EFEFEF;
-    background-color: #171717;
-    border-radius: 25px;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-}
-
-.carousel_item_next {
-    height: 35vh;
-    width: 35vw;
-    padding: 0 3vw 0 3vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.6em;
-    color: #EFEFEF;
-    background-color: #171717;
-    border-radius: 25px;
-    -webkit-filter: blur(7px);
-    -moz-filter: blur(7px);
-    -o-filter: blur(7px);
-    -ms-filter: blur(7px);
-    filter: blur(7px);
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
 }
 
 .comment_form {
@@ -621,6 +537,11 @@
 
 .centering_grid_media {
     grid-column: 3 / 5;
+}
+
+.next {
+    color: black;
+    font-size: 2rem;
 }
 
 @media (min-width: 1400px) {
@@ -713,6 +634,19 @@
     .comment_form_textarea textarea {
         padding: 3.5vh 2vh 2vh 2vh;
     }
+
+    .carousel {
+        width: auto;
+        flex-direction: row;
+        gap: 2vw;
+        margin-top: 5vh;
+        padding: 0 376vw 0 0;
+    }
+
+    .carousel_item {
+        height: 30vh;
+        width: 55vw;
+    }
 }
 
 @media (min-width: 450px) and (max-width: 750px) {
@@ -776,6 +710,20 @@
 
     .comment_form_textarea {
         grid-area: 3;
+    }
+
+    .carousel {
+        width: auto;
+        flex-direction: row;
+        gap: 2vw;
+        margin-top: 5vh;
+        padding: 0 402vw 0 0;
+    }
+
+    .carousel_item {
+        height: 30vh;
+        width: 55vw;
+        padding: 0 5vw 0 5vw;
     }
 }
 
@@ -842,6 +790,20 @@
 
     .comment_form_textarea {
         height: 20vh;
+    }
+
+    .carousel {
+        width: auto;
+        flex-direction: row;
+        gap: 2vw;
+        margin-top: 5vh;
+        padding: 0 376vw 0 0;
+    }
+
+    .carousel_item {
+        height: 33vh;
+        width: 55vw;
+        padding: 0 5vw 0 5vw;
     }
 }
 
@@ -944,5 +906,19 @@
     .comment_form_textarea label,
     .review_form_photo p {
         font-size: 1rem;
+    }
+
+    .carousel {
+        width: auto;
+        flex-direction: row;
+        gap: 2vw;
+        margin-top: 5vh;
+        padding: 0 376vw 0 0;
+    }
+
+    .carousel_item {
+        height: 45vh;
+        width: 55vw;
+        padding: 0 5vw 0 5vw;
     }
 }
