--- a/styles/global.css
+++ b/styles/global.css
@@ -287,7 +287,7 @@ footer a {
         font-size: 1rem;
     }
 
-    #review p, #comment p {
+    #comment p {
         font-size: 1.5rem;
     }
 
@@ -334,7 +334,7 @@ footer a {
         font-size: 0.9rem;
     }
 
-    #review p, #comment p {
+    #comment p {
         font-size: 1.2rem;
     }
 
@@ -348,16 +348,16 @@ footer a {
     }
 
     #feedback h1 {
-        font-size: 7rem;
+        font-size: 3.5rem;
         margin: 0;
     }
 
     #feedback h2 {
-        font-size: 3rem;
+        font-size: 2rem;
     }
 
     #feedback p {
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
 
     footer {
