--- a/styles/global.css
+++ b/styles/global.css
@@ -1,11 +1,15 @@
-* {
+body, html {
     overflow-x: hidden;
+}
+
+* {
     padding: 0;
     margin: 0;
     color: #FFFFFF;
 }
 
 body {
+    position:relative;
     background-color: #171717;
 }
 
