--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:wght@300;500;700;900");
+
 body, html {
     overflow-x: hidden;
 }
@@ -163,12 +165,16 @@ footer a {
     }
 
     p {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
 
     h1 {
         font-size: 4em;
     }   
+
+    h2 {
+        font-size: 2.2em;
+    }
 
     #feedback h1 {
         font-size: 8rem;
@@ -274,7 +280,7 @@ footer a {
     }
 
     h2 {
-        font-size: 2.3em;
+        font-size: 1.6em;
     }
 
     p {
@@ -300,7 +306,7 @@ footer a {
     }
 
     #feedback p {
-        font-size: 1rem;
+        font-size: 1.1rem;
     }
 
     footer {
@@ -318,7 +324,7 @@ footer a {
     }
 
     h2 {
-        font-size: 2.3em;
+        font-size: 1.8em;
     }
 
     p {
@@ -326,7 +332,7 @@ footer a {
     }
 
     #comment p {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
 
     #feedback {
@@ -362,7 +368,7 @@ footer a {
     }
 
     h2 {
-        font-size: 1.8em;
+        font-size: 1.6em;
     }
 
     p {
@@ -370,7 +376,7 @@ footer a {
     }
 
     #comment p {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
     }
 
     button {
